# tm1py

./: README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  setup.py  versions.json
.github/workflows/: docs.yml
TM1py/Exceptions/: Exceptions.py
TM1py/Objects/: GitProject.py  Sandbox.py
TM1py/Services/: ApplicationService.py  CellService.py  DimensionService.py  ElementService.py  HierarchyService.py  RestService.py  ServerService.py  TM1Service.py
TM1py/Utils/: Utils.py
Tests/: ChoreService_test.py  Utils.py
docs/: README.md  gen_ref_index.py  gen_ref_stubs.py  getting-started.md  how-to-contribute.md  index.md  links.md  reference.md
docs/reference/: Cube.md  CubeService.md  Dimension.md  DimensionService.md  reference.md
docs/stylesheets/: extra.css
latest/: 404.html  gen_ref_stubs.py  index.html  sitemap.xml
latest/getting-started/: index.html
latest/how-to-contribute/: index.html
latest/links/: index.html
latest/search/: search_index.json
modernize/: 404.html  CNAME  gen_ref_stubs.py  index.html  objects.inv  sitemap.xml
modernize/getting-started/: index.html
modernize/reference/: index.html
modernize/search/: search_index.json
modernize/stylesheets/: extra.css
v2.1.1.dev3/getting-started/: index.html
v2.1.1.dev3/search/: search_index.json
v2.1.1.dev4/: 404.html  index.html
v2.1.1.dev4/reference/: index.html
v2.1.1.dev5/: 404.html  index.html  sitemap.xml
v2.1.1.dev5/getting-started/: index.html
v2.1.1.dev5/reference/: index.html
v2.1.1.dev6/: 404.html  index.html  sitemap.xml
(+136 files in other folders)
