[project]
name = "TM1py"
version = "1.11.2"
description = "A python module for TM1"
readme = "README.md"
requires-python = ">=3.3"
license = { file = "LICENSE" }
keywords = ['TM1', 'IBM Cognos TM1', 'Planning Analytics', 'PA', 'Cognos']
authors = [
    { email = "mwirtz@cubewise.com" },
    { name = "Marius Wirtz" }
]

classifiers = [
    "Programming Language :: Python"
]

dependencies = [
    'ijson',
    'requests',
    'pytz',
    'requests_negotiate_sspi;platform_system=="Windows"',
    'mdxpy>=1.3.1'
]
